55) kernel: net: tcp: connect() from bound sockets can be faster.<br>
56) kernel: net: ipv4: igmp: allow removing groups from a removed interface.<br>
57) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
58) kernel: net: ipmr: fix possible race resulting from improper usage of IP_INC_STATS_BH() in preemptible context.<br>
59) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
60) kernel: net: ipv6: fix tunnel error handling.<br>
61) kernel: net: ipv6: fix the use of pcpu_tstats in ip6_tunnel.<br>
62) kernel: net: packet: allow to transmit +4 byte in TX_RING slot for VLAN case.<br>
63) kernel: net: packet: tpacket_snd(): fix signed/unsigned comparison.<br>
64) kernel: net: packet: only allow extra vlan len on ethernet devices.<br>
65) kernel: net: packet: fix tpacket_snd max frame len.<br>
66) kernel: net: packet: fixed TPACKET V3 to signal poll when block is closed rather than every packet.<br>
67) kernel: net: packet: don't pass empty blocks for PACKET_V3.<br>
<br>
<br>
<b>3.8.x</b><br>
1) miniupnpd: up to 1.9.20151212 version.<br>
2) coovachilli: up to version 1.3.1.3 (commit: 9905271a).<br>
3) init.d: fix double vlan tag support.<br>
4) init.d: if Lan2Wifi isolate and MBSSID isolate mode - enable full isolate MBSSID interfaces in bridge.<br>
5) init.d: add support VLAN isolated GW to AP`s/ZONE support (isolated vlans for LAN in router mode and recive vlans for internet in AP mode).<br>
6) kernel: ralink_raeth: temp disable recive checksumm offload in MT7621 (break mroute).<br>
7) kernel: net: qmi_wwan: remove 1199:9070 device id.<br>
8) kernel: net: add validation for the socket syscall protocol argument.<br>
9) kernel: net: ppp: define "ppp" device type.<br>
10) kernel: net: pppoe: fix memory corruption in padt work structure.<br>
11) kernel: net: ipv6: restrict hop_limit sysctl setting to range [1; 255].<br>
12) kernel: net: ipv6: only act upon NETDEV_*_TYPE_CHANGE if we have ipv6 addresses.<br>
<br>
<br>
<br>